syntax = "proto3";

package roc.im.sdk.net;

option go_package = "./;im";
option csharp_namespace = "IM.Protocol";


message Conversation {
  // 会话ID
  string convertsion_id = 1;

  // 群主id
  string owner_id = 2;

  // ext
  map<string, string> ext = 3;
};

message CmdMessage {
  int64 cmd = 1;
};

message ContentMessage {
    // 消息 ID
  string message_id = 1;

  // 消息类容
  bytes content = 2;

  map<string, string> ext = 3;

  string sender_id = 4;

  string convertsion_id = 5;

  int64 message_type = 6;

  int64 index = 7;
};

message Message {
  bool isCmd = 1;
  CmdMessage cmdMessage = 2;
  ContentMessage contentMessage = 3;
};


message ConversationMessages {
  string conversation_id = 1;
  repeated Message message_arr = 2;
};

// 拉取单链信息
// -------------------- fetch conv message ------------------
message FetchSingleLinkMessagesReq{
  string conversation_id = 1;
  int64 from_index = 2;
  int64 to_index = 3;
};

message FetchSingleLinkMessagesResp {
  ConversationMessages conversation_messages = 1;
};
// ----------------------------------------------------------

// 拉取混链信息
// --------------------- fetch convs -------------------------
message FetchMixedLinkMessagesReq {
  repeated string conversation_id_arr = 1;
  int64 count = 2; // 每个会话携带的消息数目
};

message FetchMixedLinkMessagesResp {
  repeated ConversationMessages conversation_messages = 1;
};
//-----------------------------------------------------------

// 发送消息信息
// -------------------- send message ------------------------
message SendBatchMessageReq {
  repeated ContentMessage message_arr = 1;
};

message SendBatchMessageResp {
  repeated SendBatchMessageResp send_message_response_arr = 1;
};
//-----------------------------------------------------------

// 下推消息
// --------------------- push message -----------------------
message PushMessages {
  repeated Message push_message_arr = 1;
};
// ----------------------------------------------------------

message RequestBody {
  string request_id = 1;
  FetchMixedLinkMessagesReq fetch_mixed_link_messages_request = 2;
  FetchSingleLinkMessagesReq fetch_single_link_messages_request = 3;
  SendBatchMessageReq send_batch_messages_request = 4;

  string url = 5;
};


message ResponseBody {
  string response_id = 1;
  FetchMixedLinkMessagesResp fetch_mixed_link_messages_response = 2;
  FetchSingleLinkMessagesResp fetch_single_link_messages_response = 3;
  SendBatchMessageResp send_batch_messages_response = 4;
  PushMessages push_messages = 5;
};